--- a/MovilApp/MovilApp.csproj
+++ b/MovilApp/MovilApp.csproj
@@ -27,6 +27,9 @@
     <EmbeddedResource Update="DeBanco.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Individual.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Recuperar.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
